<resources>
    <string name="app_name">Sales Quick</string>
    <string name="app_Logo">Logo</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_check">Verificando</string>
    <string name="menu">Menu</string>
    <string name="venta">Venta</string>
    <string name="producto">Producto</string>
    <string name="categoria">Categoria</string>
    <string name="comprar">Comprar</string>

</resources>
